--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@prettier/plugin-ruby": "^3.2.2",
+    "prettier": "^2.8.4",
     "webpack-dev-server": "^3.11.2"
   }
 }
