--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "version": "0.1.0",
   "devDependencies": {
     "@prettier/plugin-ruby": "^3.2.2",
+    "cypress": "^9.7.0",
     "prettier": "^2.8.4",
     "webpack-dev-server": "^3.11.2"
   }
